# ferramenta-calculo-irpf

./: .gitignore  ANALISE_COMPLETA.md  CONFIGURACAO_AVANCADA.md  CONFIGURACAO_FINAL.md  CORRECOES_CODIGO.md  README.md  SETUP_GITHUB.md  SUMARIO_EXECUTIVO.md  extract_pdf.py  parse_ir_data.py  pyproject.toml  vercel.json
api/: index.py  main.py  requirements.txt
api/api/v1/: calculos.py  parametros.py
api/core/: config.py  supabase.py
api/repositories/: calculo_repository.py  parametros_repository.py
api/schemas/: calculo.py  parametros.py
api/services/: calculo_service.py
api/templates/: relatorio.html
api/utils/: pdf.py
backend/: .env  .env.example  requirements.txt
backend/api/: index.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  calculos.py  parametros.py
backend/app/core/: config.py  supabase.py
backend/app/repositories/: __init__.py  calculo_repository.py  parametros_repository.py
backend/app/schemas/: __init__.py  calculo.py  parametros.py
backend/app/services/: calculo_service.py
backend/app/templates/: relatorio.html
backend/app/utils/: pdf.py
backend/db/: schema.sql  seed.sql
frontend/: index.html  package.json
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: CalculadoraPage.tsx  ConsultaPage.tsx  HomePage.tsx  ParametrosPage.tsx  RelatorioPage.tsx  ResultadoPage.tsx
